# tickstream

./: .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  conftest.py  docker-compose.yml  pyproject.toml
.github/workflows/: docker-image.yml
examples/: query_demo.py  run_binance.py  run_with_storage.py
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: tickstream.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
src/tickstream/: __init__.py  config.py  logging.py  models.py  orchestrator.py
src/tickstream/cli/: __init__.py
src/tickstream/connectors/: __init__.py  base.py  binance.py  coinbase.py
src/tickstream/monitoring/: __init__.py  metrics.py
src/tickstream/query/: __init__.py  store.py
src/tickstream/storage/: __init__.py  parquet_writer.py
tests/: README.md  _helpers.py  conftest.py  factories.py  test_binance_connector.py  test_coinbase_connector.py  test_metrics.py  test_orchestrator.py  test_parquet_writer.py  test_store.py  test_tick.py
tests/integration/: test_writer_load.py
tests/unit/: test_parquet_writer.py
tick_data/exchange=binance/symbol=BTCUSDT/date=2026-05-20/: 03730980-6a3c-4693-a399-31ba8799be78.parquet  7c739b79-0c0e-4158-a035-cf84a58ec5c9.parquet  f371d6f1-c4c1-4045-b07b-f6ef0aa6948f.parquet
tick_data/exchange=binance/symbol=ETHUSDT/date=2026-05-20/: 34acdd66-5be4-40e6-829f-5fc87c74d30d.parquet  9aebbf03-4a98-4cd9-9948-9163d3f0407f.parquet  d074301c-f7d5-4685-a684-169e9d7b1670.parquet
